Fix panel content alignment.

--- a/refinery/ui/source/styles/refinery-style.less
+++ b/refinery/ui/source/styles/refinery-style.less
@@ -831,6 +831,12 @@ a.analysis-header {
     position: relative;
     margin: 0 0 5px 0;
     padding: 0;
+
+    .refinery-panel-content {
+      position: relative;
+      margin: 0 10px;
+      padding: 5px 0;
+    }
   }
 
   .refinery-header {
